// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setPropertyValue can set a bool 1`] = `
 {
  "facets": Array [],
  "label": "",
  "lang": "",
  "objectId": "",
  "objectType": 4,
  "objectValue":  {
    "bool_val": true,
    "bytes_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "date_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "datetime_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "default_val": "",
    "double_val": 0,
    "geo_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "int_val": Long {
      "high": 0,
      "low": 0,
      "unsigned": false,
    },
    "password_val": "",
    "str_val": "",
    "uid_val": Long {
      "high": 0,
      "low": 0,
      "unsigned": true,
    },
    "val": "bool_val",
  },
  "predicate": "",
  "subject": "",
}
`;

exports[`setPropertyValue can set a double 1`] = `
 {
  "facets": Array [],
  "label": "",
  "lang": "",
  "objectId": "",
  "objectType": 3,
  "objectValue":  {
    "bool_val": false,
    "bytes_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "date_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "datetime_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "default_val": "",
    "double_val": 1.253,
    "geo_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "int_val": Long {
      "high": 0,
      "low": 0,
      "unsigned": false,
    },
    "password_val": "",
    "str_val": "",
    "uid_val": Long {
      "high": 0,
      "low": 0,
      "unsigned": true,
    },
    "val": "double_val",
  },
  "predicate": "",
  "subject": "",
}
`;

exports[`setPropertyValue can set a geopoint 1`] = `
 {
  "facets": Array [],
  "label": "",
  "lang": "",
  "objectId": "",
  "objectType": 7,
  "objectValue":  {
    "bool_val": false,
    "bytes_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "date_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "datetime_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "default_val": "",
    "double_val": 0,
    "geo_val": ByteBuffer {
      "buffer": Object {
        "data": Array [
          1,
          1,
          0,
          0,
          0,
          51,
          51,
          51,
          51,
          51,
          115,
          43,
          64,
          195,
          245,
          40,
          92,
          143,
          18,
          74,
          64,
        ],
        "type": "Buffer",
      },
      "limit": 21,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "int_val": Long {
      "high": 0,
      "low": 0,
      "unsigned": false,
    },
    "password_val": "",
    "str_val": "",
    "uid_val": Long {
      "high": 0,
      "low": 0,
      "unsigned": true,
    },
    "val": "geo_val",
  },
  "predicate": "",
  "subject": "",
}
`;

exports[`setPropertyValue can set a string 1`] = `
 {
  "facets": Array [],
  "label": "",
  "lang": "",
  "objectId": "",
  "objectType": 10,
  "objectValue":  {
    "bool_val": false,
    "bytes_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "date_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "datetime_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "default_val": "",
    "double_val": 0,
    "geo_val": ByteBuffer {
      "buffer": Buffer [],
      "limit": 0,
      "littleEndian": false,
      "markedOffset": -1,
      "noAssert": false,
      "offset": 0,
    },
    "int_val": Long {
      "high": 0,
      "low": 0,
      "unsigned": false,
    },
    "password_val": "",
    "str_val": "string test",
    "uid_val": Long {
      "high": 0,
      "low": 0,
      "unsigned": true,
    },
    "val": "str_val",
  },
  "predicate": "",
  "subject": "",
}
`;

exports[`toSetMutation create nquads for nested objects 1`] = `
 {
  "del": Array [],
  "schema": Array [],
  "set": Array [
     {
      "facets": Array [],
      "label": "",
      "lang": "",
      "objectId": "",
      "objectType": 10,
      "objectValue":  {
        "bool_val": false,
        "bytes_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "date_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "datetime_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "default_val": "",
        "double_val": 0,
        "geo_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "int_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": false,
        },
        "password_val": "",
        "str_val": "Paul",
        "uid_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": true,
        },
        "val": "str_val",
      },
      "predicate": "name",
      "subject": "_:tmp0",
    },
     {
      "facets": Array [],
      "label": "",
      "lang": "",
      "objectId": "",
      "objectType": 10,
      "objectValue":  {
        "bool_val": false,
        "bytes_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "date_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "datetime_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "default_val": "",
        "double_val": 0,
        "geo_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "int_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": false,
        },
        "password_val": "",
        "str_val": "Max",
        "uid_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": true,
        },
        "val": "str_val",
      },
      "predicate": "name",
      "subject": "_:tmp1",
    },
     {
      "facets": Array [],
      "label": "",
      "lang": "",
      "objectId": "_:tmp1",
      "objectType": 0,
      "objectValue": null,
      "predicate": "friend",
      "subject": "_:tmp0",
    },
  ],
}
`;

exports[`toSetMutation create nquads from object 1`] = `
 {
  "del": Array [],
  "schema": Array [],
  "set": Array [
     {
      "facets": Array [],
      "label": "",
      "lang": "",
      "objectId": "",
      "objectType": 10,
      "objectValue":  {
        "bool_val": false,
        "bytes_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "date_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "datetime_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "default_val": "",
        "double_val": 0,
        "geo_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "int_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": false,
        },
        "password_val": "",
        "str_val": "Paul",
        "uid_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": true,
        },
        "val": "str_val",
      },
      "predicate": "name",
      "subject": "_:tmp0",
    },
     {
      "facets": Array [],
      "label": "",
      "lang": "",
      "objectId": "",
      "objectType": 3,
      "objectValue":  {
        "bool_val": false,
        "bytes_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "date_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "datetime_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "default_val": "",
        "double_val": 1.85,
        "geo_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "int_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": false,
        },
        "password_val": "",
        "str_val": "",
        "uid_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": true,
        },
        "val": "double_val",
      },
      "predicate": "size",
      "subject": "_:tmp0",
    },
  ],
}
`;

exports[`toSetMutation uses _uid_ as subject 1`] = `
 {
  "del": Array [],
  "schema": Array [],
  "set": Array [
     {
      "facets": Array [],
      "label": "",
      "lang": "",
      "objectId": "",
      "objectType": 10,
      "objectValue":  {
        "bool_val": false,
        "bytes_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "date_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "datetime_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "default_val": "",
        "double_val": 0,
        "geo_val": ByteBuffer {
          "buffer": Buffer [],
          "limit": 0,
          "littleEndian": false,
          "markedOffset": -1,
          "noAssert": false,
          "offset": 0,
        },
        "int_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": false,
        },
        "password_val": "",
        "str_val": "Paul 2",
        "uid_val": Long {
          "high": 0,
          "low": 0,
          "unsigned": true,
        },
        "val": "str_val",
      },
      "predicate": "name2",
      "subject": "0xd8450668580bf30f",
    },
  ],
}
`;
